# Arbiter

./: Cargo.toml  config.toml
api/: Cargo.toml
api/src/: main.rs  routes.rs  state.rs  ws.rs
core/: Cargo.toml
core/src/: arbitrage.rs  config.rs  executor.rs  lib.rs  types.rs
core/src/exchange/: bitget.rs  bybit.rs  mod.rs
