[package]
name = "arb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
arb-core = { path = "../core" }
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dashmap = "5"
rust_decimal = { version = "1", features = ["serde-with-str"] }
